State of the work at the end of the day.

--- a/sources.bib
+++ b/sources.bib
@@ -21,3 +21,20 @@
   publisher={Springer}
 }
 
+@inproceedings{Spasic2012,
+  title={Formalization of incremental simplex algorithm by stepwise refinement},
+  author={Spasi{\'c}, Mirko and Mari{\'c}, Filip},
+  booktitle={International Symposium on Formal Methods},
+  pages={434--449},
+  year={2012},
+  organization={Springer}
+}
+
+@book{Isabelle,
+  title={Isabelle/HOL: a proof assistant for higher-order logic},
+  author={Nipkow, Tobias and Paulson, Lawrence C and Wenzel, Markus},
+  volume={2283},
+  year={2002},
+  publisher={Springer Science \& Business Media}
+}
+
