--- a/report.tex
+++ b/report.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 
 \usepackage[utf8]{inputenc}
+\usepackage{hyperref}
 \usepackage{amsmath}
 \usepackage{amssymb}
 
@@ -9,7 +10,7 @@
 \newcommand{\icheckpoint}{\mathtt{Checkpoint}()}
 \newcommand{\ibacktrack}[1]{\mathtt{Backtrack}(#1)}
 
-\title{Notes on Gomory Cuts}
+\title{Internship Report}
 \author{Alban Reynaud}
 \date{}
 
@@ -21,7 +22,11 @@
 \end{abstract}
 
 \section{Introduction}
+\subsection{Isabelle}
+\textit{TODO}
+
 \subsection{SMT Solving and Linear Arithmetic}
+\label{smt}
 Let $T$ be a quantifier-free theory. A $T$-solver is an algorithm to check if a
 finite set of atom of $T$ can be satisfied.
 
@@ -34,6 +39,16 @@ operator. An assignement $v$ is a function that maps variables to rationals.
 If $c = \sum a_i x_i \bowtie b$ is a constraint,  we say that the assignement
 $v$ satisfies the constraint c (or $v \vDash c$) if
 $$\sum a_i v(x_i) \bowtie b$$.
+
+The other theory we will study is the theory of \textit{mixed-integer linear
+arithmetic}. It consists of linear arithmetic problems where some variables are
+required to be integer.
+%TODO: give an example
+
+Note that we are only interested in the decision problem (\textit{i.e} checking
+if a set of constraints admits a satisfying assignment), not the optimization
+problem (\textit{i.e} finding an assignment satisfying the constraints that
+maximizes a linear objective function). 
 
 Let $\Phi$ be a boolean formula of atoms of the theory $T$. We may want to find
 an assignement $v$ that satisfies $\Phi$, or to know if no such assignement
@@ -52,7 +67,11 @@ with
 \end{array}
 \end{displaymath}
 
-%TODO: give a section number
+Now that SMT and linear arithmetic have been presented, we can move on to the
+basics of their resolution.
+
+\subsection{Incremental Interface for SMT solvers}
+%TODO: give a chapter number for the book
 An efficient procedure to solve SMT problems is DPLL($T$) \cite{Decision2016},
 which works as a combination of a SAT-solver and a $T$-solver. Here is a quick
 description of such an algorithm:
@@ -87,7 +106,25 @@ We will call such an inteface an \textit{incremental interface}.
 A similar description can be found in \cite{Dutertre2006} and
 \cite{Thiemann2018}.
 
-\textbf{Example:} let us solve the formula $\Phi$ using a DPLL($T$) procedure:
+An example of an execution of DPLL($T$) is given in appendix \ref{dpll}.
+
+Dutertre and de Moura have proposed a Simplex-based solver to solve linear
+arithmetic \cite{Dutertre2006}. A partial version of this algorithm has been
+formalized in Isabelle by Spacić and Marić \cite{Spacic2012} and extended to
+use the incremental interface by Ralph Bottesch, Max Haslbeck and René Thiemann
+\cite{Thiemann2018}. The ultimate goal of this internship is to extend the
+previous work to solve mixed-integer linear problems.
+
+\bibliographystyle{plain}
+\bibliography{sources}
+
+\appendix
+
+\section{Example: an Execution of DPLL($T$)}
+\label{dpll}
+Suppose that we want to solve the formula $\Phi$ given in section \ref{smt}
+using DPLL($T$). First, let us interpret $\Phi$ as a SAT-formula and find an
+valuation that satisfies it. For example:
 \begin{itemize}
   \item Arbitrarily affects $A$ to 1. Asserts the atom $A$. Get a checkpoints
     $c_1$.
@@ -147,8 +184,8 @@ to the system:
 \end{displaymath}
 
 $\icheck$ may return the assignement $(x=1, y=2)$. Finally, the formula $\Phi$
-is satisfiable, and $(x=1, y=2) \vDash \Phi$.
+is satisfiable, and $(x=1, y=h) \vDash \Phi$.
 
-\bibliographystyle{plain}
-\bibliography{sources}
+\section{Resolution of Mixed-Integer Linear Problems}
+
 \end{document}
