--- a/sources.bib
+++ b/sources.bib
@@ -38,3 +38,17 @@
   publisher={Springer Science \& Business Media}
 }
 
+@article{ConcreteSemantics,
+  title={Concrete Semantics},
+  author={Nipkow, Tobias and Klein, Gerwin},
+  journal={A Proof Assistant Approach},
+  year={2014},
+  publisher={Springer}
+}
+
+@book{Schrijver1998,
+  title={Theory of linear and integer programming},
+  author={Schrijver, Alexander},
+  year={1998},
+  publisher={John Wiley \& Sons}
+}
