--- a/report.tex
+++ b/report.tex
@@ -4,10 +4,12 @@
 \usepackage{hyperref}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{amsthm}
 \usepackage{isabelle}
 \usepackage{isabellesym}
 \usepackage{algpseudocode}
 \usepackage{tikz}
+\usepackage{stmaryrd}
 \usepackage{ifthen}
 
 \newcommand{\iassert}[1]{\mathtt{Assert}(#1)}
@@ -16,6 +18,7 @@
 \newcommand{\ibacktrack}[1]{\mathtt{Backtrack}(#1)}
 \newcommand{\csat}{\mathtt{Satisfiable}}
 \newcommand{\cunsat}{\mathtt{Unsatisfiable}}
+\newcommand{\cone}{\mathrm{cone}}
 
 % Source: https://isabelle.in.tum.de/community/Generate_TeX_Snippets
 \newcommand{\DefineSnippet}[2]{%
@@ -182,15 +185,15 @@ arithmetic \cite{Dutertre2006}. A partial version of this algorithm has been
 formalized in Isabelle by Spasić and Marić \cite{Spasic2012} and extended to
 use the incremental interface by Ralph Bottesch, Max Haslbeck and René Thiemann
 \cite{Thiemann2018}. The ultimate goal of this internship is to extend the
-previous work to solve MILP.
+previous work to solve MILPs.
 
 \section{Resolution of Mixed-Integer Linear Problems}
-In this section, I will describe an algorithm to solve MILP and the mathematics
+In this section, I will describe an algorithm to solve MILPs and the mathematics
 required to prove its correctness.
 
 \subsection{The Branch-and-Bound algorithm}
 % TODO: give a reference?
-Branch-and-bound is a simple algorithm to solve ILP and MILP. Though it can be
+Branch-and-bound is a simple algorithm to solve ILPs and MILPs. Though it can be
 stated as an optimization algorithm, we will focus on its formulation for
 decision problems.
 
@@ -298,12 +301,11 @@ here is what we could obtain:
            \ref{pbloop}. The solutions of the relaxation lie in the red area.}
 \end{figure}
 
-In this case, the problem is unbounded so the branch-and-bound algorithm loops.
-This is why we will try to add constraints of the form $-B \leqslant x_i
-\leqslant B$ for all variable $x_i$ so that the problem is bounded and the
-branch-and-bound algorithm terminates. In the next subsections, we will see how
-to compute a bound $B$ such that the problem has a solution if and only if it
-has a solution with $-B \leqslant x_i \leqslant B$ for all variable $x_i$.
+In this case, the problem is unbounded and makes the branch-and-bound algorithm
+loop. This is why we will try to add constraints of the form $-B \leqslant x_i
+\leqslant B$ for all variable $x_i$ to bound the problem, at the condition that
+the bounded problem admits a solution if and only if the original problem admits
+a solution.
 
 \subsection{Obtening bounds for ILPs and MILPs}
 First of all, let us remark that if a linear problem contains only large
@@ -329,16 +331,16 @@ To derive bounds, we will use definitions and results that can be found in the
 book of Schrijver \cite{Schrijver1998}.
 
 \begin{definition}[Finitely Generated Cone]
-  A set of point $C$ is a \textup{finitely generated cone}
-  iff $C = cone \{x_0, ..., x_{n-1}\}$ where
-  $$cone \{x_0, ..., x_{n-1}\} =
+  A set of points $C$ is a \textup{finitely generated cone}
+  iff $C = \cone~\{x_0, ..., x_{n-1}\}$ where
+  $$\cone~\{x_0, ..., x_{n-1}\} =
       \{\sum_{i<n} \lambda_i x_i~|~\lambda_0, ..., \lambda_{n-1} \leqslant 0\}
   $$
   for some $x_0, ..., x_{n-1}$.
 \end{definition}
 
 \begin{definition}[Polyhedral Cone]
-  A set of point $C$ is a \textup{polyhedral cone}
+  A set of points $C$ is a \textup{polyhedral cone}
   iff $C = \{x~|~Ax \leqslant 0\}$ for some matrix $A$.
 \end{definition}
 
@@ -354,64 +356,211 @@ book of Schrijver \cite{Schrijver1998}.
 
 \begin{definition}[Polytope]
   A set of points $P$ is a \textup{polytope} iff it is the convex hull of a
-  finite set $C = \{x_0, ..., x_m\}$, \textit{i.e}
-  $$C = \{\sum_{i<m} \lambda_i x_i~|~\lambda_0, ..., \lambda_{m-1} \leqslant 0
-                                     \wedge \sum_{i<n} \lambda_i = 1\}$$
+  finite set $C = \{x_0, ..., x_{m-1}\}$, \textit{i.e}
+  $$C = \{\sum_{i<m} \lambda_i x_i~|~\lambda_0, ..., \lambda_{m-1} \geqslant 0
+                                     \wedge \sum_{i<m} \lambda_i = 1\}$$
 \end{definition}
 
 \begin{corollary}[Decomposition Theorem for Polyhedra]
-  A set of point $P$ is a polyhedron iff there exists a polytope $C$ and a
+  A set of points $P$ is a polyhedron iff there exists a polytope $C$ and a
   finitely generated cone $C$ such that $P = Q + C$.
 \end{corollary}
 
 To illustrate this theorem, let us take the following problem:
-\begin{displaymath}
+\begin{equation} \label{eqdecomp}
   \left\{
-  \begin{array}{cccc}
-    3x & - & y  & \geqslant 0 \\
-    x  & + & y  & \geqslant 4 \\
-       &   & y  & \geqslant 1 \\
-    x  & - & 2y & \leqslant 2
+  \begin{array}{ccccc}
+    -6x & + & 2y & \leqslant & 1  \\
+    3x  & + & 2y & \geqslant & 11 \\
+        &   & 2y & \geqslant & 1  \\
+    2x  & - & 4y & \leqslant & 5
   \end{array}
   \right.
-\end{displaymath}
+\end{equation}
 
-As we have seen, the set of the solutions of this problem is a polyhedron. In
-the figure \ref{decomposition} ...
+As we have seen, the set of the solutions of this problem is a polyhedron. On
+the figure \ref{figdecomp}, the polyhedron is represented by the red and blue
+areas. As we can see, it is the sum of a polytope (the red triangle) and a cone
+($\cone~\{u, v\}$).
 
 \begin{figure}[h]
+  \label{figdecomp}
   \centering
 
   \begin{tikzpicture}
-    \draw[style=help lines, thin] (0, 0) grid (7, 7);
-    \draw[thick, ->] (0, 0) -- (7, 0) node[anchor=west] {x};
-    \draw[thick, ->] (0, 0) -- (0, 7) node[anchor=south] {y};
+    \coordinate (extr) at (6.5, 6.5);
+    \draw[style=help lines, thin] (0, 0) grid (extr);
+    \draw[thick, ->] (0, 0) -- (6.5, 0) node[anchor=west] {x};
+    \draw[thick, ->] (0, 0) -- (0, 6.5) node[anchor=south] {y};
 
-    \coordinate (A) at (2.333, 7);
-    \coordinate (B) at (1, 3);
-    \coordinate (C) at (3, 1);
-    \coordinate (D) at (4, 1);
-    \coordinate (E) at (7, 2.5);
-    \coordinate (B') at (7, 6);
-    \coordinate (D') at (6, 7);
+    \coordinate (A) at (2, 6.5);
+    \coordinate (B) at (0.5, 2);
+    \coordinate (C) at (1.5, 0.5);
+    \coordinate (D) at (3.5, 0.5);
+    \coordinate (E) at (6.5, 2);
+    \coordinate (B') at (6.5, 5);
+    \coordinate (D') at (5.5, 6.5);
     \draw[thick] (A) -- (B);
     \draw[thick] (B) -- (C);
     \draw[thick] (C) -- (D);
     \draw[thick] (D) -- (E);
     \fill[fill=red, opacity=0.5] (B) -- (C) -- (D) -- cycle;
-    \fill[fill=blue, opacity=0.5] (A) -- (B) -- (D) -- (E) -- (7, 7) -- cycle;
+    \fill[fill=blue, opacity=0.5] (A) -- (B) -- (D) -- (E) -- (extr) --
+                                  cycle;
 
-    \draw[very thick, ->] (B) -- (2, 6);
-    \draw[very thick, ->] (B) -- (3, 4);
-    \draw[very thick, ->] (D) -- (5, 4);
-    \draw[very thick, ->] (D) -- (6, 2);
+    \draw[very thick, ->] (B) -- (1.5, 5) node[anchor=west] {u};
+    \draw[very thick, ->] (B) -- (2.5, 3) node[anchor=south] {v};
+    \draw[very thick, ->] (D) -- (4.5, 3.5) node[anchor=west] {u};
+    \draw[very thick, ->] (D) -- (5.5, 1.5) node[anchor=south] {v};
     \draw[dashed] (B) -- (B');
     \draw[dashed] (D) -- (D');
   \end{tikzpicture}
 
-  \label{decomposition}
-  \caption{}
+  \caption{Decomposition of the polyhedron defined by the problem
+           \ref{eqdecomp}}
 \end{figure}
+
+\begin{corollary}
+  $P$ is a polytope iff $P$ is a bounded polyhedron.
+\end{corollary}
+
+\begin{definition}[Integer Hull]
+  Given a polyhedron $P$, the \textup{integer hull} $P_I$ is the convex hull of
+  the integral vectors of $P$, i.e $P_I = Hull (P \cap \mathbb{Z}^n\}$.
+\end{definition}
+
+\begin{theorem}
+  For any rational polyhedron $P$, $P_I$ is a polyhedron. Moreover, if
+  $P = Q + C$ with $Q$ a polytope and $C$ a cone, the there exists a polytope
+  $Q'$ such that $P_I = Q' + C$.
+\end{theorem}
+\begin{proof}
+  Let us decompose $P$ into $P = Q + C$ where
+  $C = \cone~\{y_0, ..., y_{s-1}\}$. All the $y_i$ are rational vectors.
+  Note that if we multiply them by positive constants, the cone is unchanged.
+  This why, without loss of generality, we can assume that the $y_i$ are
+  integral.
+
+  Let us define
+  $$B = \{\sum_{i < s} \mu_i y_i~|~0 \leqslant \mu_i \leqslant 1\}$$
+  and show that $$P = (Q + B)_I + C$$
+
+  The easy inclusion is the following:
+  $$(Q + B)_I + C \subseteq P_I + C = P_I + C_I \subseteq (P + C)_I = P_I$$
+
+  To prove the other inclusion, let us introduce $x \in P$.
+  There exists $q \in Q$ and $\lambda_0, ..., \lambda_{s-1}
+  \leqslant 0$ such that: $$x = q + \sum_{i < s} \lambda_i y_i$$ But for every
+  $i$, $\lfloor \lambda_i \rfloor y_i$ is an integral vector, so
+  $$x - \sum_{i<n} \lfloor \lambda_i \rfloor y_i=
+      q + \sum_{i<n} (\lambda_i - \lfloor \lambda_i \rfloor) y_i$$
+  is integral, and as $\sum_{i<n} (\lambda_i - \lfloor \lambda_i \rfloor) y_i$
+  is contained in $B$:
+  $$x - \sum_{i<n} \lfloor \lambda_i \rfloor y_i \in (Q + B)_I$$
+  Finally: $x \in (Q + B)_I + C$
+
+  $(Q + B)$ is bounded, so $(Q + B)_I$ is the convex hull of a finite set, it is
+  a polytope. If we take $Q' = (Q + B)_I$, we have the result.
+\end{proof}
+
+A graphical representation of this proof is given in figure
+\ref{integer_hull_decomp}. With again the polytope defined by the problem
+\ref{eqdecomp}, the set boundary of the set $(Q + B)$ is represented
+in red, $(Q + B)_I$ is represented in green. As we can see, $(Q + B)_I + C$ (the
+red and yellow areas) is exactly the integer hull of the polyhedron.
+
+\begin{figure}[h]
+  \label{integer_hull_decomp}
+  \centering
+
+  \begin{tikzpicture}
+    \coordinate (extr) at (6.5, 6.5);
+    \draw[style=help lines, thin] (0, 0) grid (extr);
+    \draw[thick, ->] (0, 0) -- (6.5, 0) node[anchor=west] {x};
+    \draw[thick, ->] (0, 0) -- (0, 6.5) node[anchor=south] {y};
+    \foreach \x in {0, 1, ..., 6} {
+      \foreach \y in {0, 1, ..., 6} {
+        \node[draw, circle, fill=black, inner sep=0.7pt] at (\x, \y) {};
+      }
+    }
+
+    \coordinate (A) at (2, 6.5);
+    \coordinate (A') at (2.167, 6.5);
+    \coordinate (B) at (0.5, 2);
+    \coordinate (C) at (1.5, 0.5);
+    \coordinate (D) at (3.5, 0.5);
+    \coordinate (E) at (6.5, 2);
+    \coordinate (E') at (6.5, 2.25);
+    %\coordinate (B') at (6.5, 5);
+    %\coordinate (D') at (5.167, 5.5);
+
+    \coordinate (I) at (2, 4);
+    \coordinate (J) at (1, 3);
+    \coordinate (K) at (1, 2);
+    \coordinate (L) at (2, 1);
+    \coordinate (M) at (4, 1);
+    \coordinate (N) at (5, 2);
+    \coordinate (O) at (3, 4);
+
+    \draw[thin] (A) -- (B);
+    \draw[thin] (B) -- (C);
+    \draw[thin] (C) -- (D);
+    \draw[thin] (D) -- (E);
+
+    \draw[thick] (A') -- (J);
+    \draw[thick] (M) -- (E');
+
+    \fill[fill=yellow, opacity=0.5]
+      (A') -- (J) -- (I) -- (O) -- (N) -- (M) -- (E') -- (extr) -- cycle;
+    \draw[red, very thick]
+      (B) -- (C) -- (D) -- (5.5, 1.5) -- (4.5, 3.5) -- (1.5, 5) -- cycle;
+    \draw[very thick, fill=green, fill opacity=0.5]
+      (I) -- (J) -- (K) -- (L) -- (M) -- (N) -- (O) -- cycle;
+
+    \draw[red, thick, ->] (B) -- (1.5, 5);
+    \draw[red, thick, ->] (D) -- (4.5, 3.5);
+    \draw[red, thick, ->] (D) -- (5.5, 1.5);
+  \end{tikzpicture}
+
+  \caption{Decomposition of the integer hull of the polytope defined by the
+           problem \ref{eqdecomp}}
+\end{figure}
+
+With this result, we know that the problem has an integral solution iff it has
+an integral solution in $Q'$ which is bounded. We now want to find a general
+bound $B$ depending on the parameters of the problem.
+In addition to the previous theorem, we need
+integrality an bound hypotheses to $C$. Let us use the notations
+$\llbracket a, b \rrbracket$ for the integers in the interval $[a, b]$.
+We finally have the desired theorem:
+
+\begin{theorem}
+  If $P = \{x~|~Ax \leqslant b\}$ with
+  $A \in \llbracket -m, m \rrbracket^{p \times n}$,
+  $b \in \llbracket -m, m \rrbracket^p$ and $m \geqslant 1$, then
+  $$P \cap \mathbb{Z}^n \neq \emptyset \Longleftrightarrow
+  P \cap \llbracket -B, B \rrbracket^n \neq \emptyset$$ where
+  $$B = (n + 1)! \cdot m^n$$
+\end{theorem}
+
+With the same ouline of proof, we can obtain a more general result that
+encompasses MILPs and strict inequalities. If $I$ is a subset of
+$\llbracket 1, n \rrbracket$:
+\begin{theorem}
+  If $P = \{x~|~Ax \leqslant b \cap A'x < b'\}$ with
+  $A \in \llbracket -m, m \rrbracket^{p \times n}$,
+  $b \in \llbracket -m, m \rrbracket^p$,
+  $A' \in \llbracket -m, m \rrbracket^{p \times n}$,
+  $b' \in \llbracket -m, m \rrbracket^p$ and $m \geqslant 1$, then
+
+  $$\{x \in P~|~\forall i \in I.~x_i \in \mathbb{Z}\} \neq \emptyset
+      \Longleftrightarrow
+    \{x \in P~|~\forall i \in I.~x_i \in \llbracket -B, B \rrbracket\}
+      \neq \emptyset$$
+  where
+  $$B = (n + 1)! \cdot m^n$$
+\end{theorem}
+
 
 \bibliographystyle{plain}
 \bibliography{sources}
@@ -483,5 +632,30 @@ to the system:
 
 $\icheck$ may return the assignement $(x=1, y=2)$. Finally, the formula $\Phi$
 is satisfiable, and $(x=1, y=2) \vDash \Phi$.
+
+\section{To move on another section} To do so, we will generalize the statements of
+the previous theorems to incorporate bounds. 
+\begin{theorem}[Generalized Farkas-Minkowsky-Weyl Theorem]
+  A set $C$ is a finitely generated cone iff is is a polyhedral cone.
+
+  Moreover, if $C = \cone~X$ with $X \subseteq \llbracket -m, m \rrbracket$
+  and $m \geqslant 1$,
+  then there exists a matrix $A \in \llbracket -B, B \rrbracket^{p \times n}$
+  such that $$C = \{x~|~Ax \leqslant 0\}$$ with $$B = (n-1)! \cdot m^n$$
+\end{theorem}
+
+\begin{corollary}[Generalized Decomposition Theorem]
+  A set of points $P$ is a polyhedron iff there exists a polytope $C$ and a
+  finitely generated cone $C$ such that $P = Q + C$.
+
+  Moreover, if $P = \{x~|~Ax \leqslant b\}$ with
+  $A \in \llbracket -m, m \rrbracket^{p \times n}$ and
+  $b \in \llbracket -m, m \rrbracket^p$, and $m \geqslant 1$,
+  then there exists finite sets
+  $Q \subseteq [-B, B]$ and $X \subseteq \llbracket -B, B \rrbracket$ such that
+  $$P = hull~Q + \cone~X$$ with $$B = n! \cdot m^n$$
+\end{corollary}
+
+
 
 \end{document}
