State of the work at the end of the day

--- a/sources.bib
+++ b/sources.bib
@@ -52,3 +52,14 @@
   year={1998},
   publisher={John Wiley \& Sons}
 }
+
+@article{Linear_Inequalities-AFP,
+  author  = {Ralph Bottesch and Alban Reynaud and René Thiemann},
+  title   = {Linear Inequalities},
+  journal = {Archive of Formal Proofs},
+  month   = jun,
+  year    = 2019,
+  note    = {\url{http://isa-afp.org/entries/Linear_Inequalities.html},
+            Formal proof development},
+  ISSN    = {2150-914x},
+}
