--- a/report.tex
+++ b/report.tex
@@ -19,6 +19,7 @@
 \newcommand{\csat}{\mathtt{Satisfiable}}
 \newcommand{\cunsat}{\mathtt{Unsatisfiable}}
 \newcommand{\cone}{\mathrm{cone}}
+\newcommand{\ints}{\mathbb{Z}}
 
 % Source: https://isabelle.in.tum.de/community/Generate_TeX_Snippets
 \newcommand{\DefineSnippet}[2]{%
@@ -33,6 +34,7 @@
   \else+++++++ERROR: Snippet ``#1 not defined+++++++ \fi}
 
 \input{../test-cantor-theorem/generated/snippets}
+\input{../linear-inequalities-in-isabelle/generated/snippets}
 
 \newtheorem{definition}{Definition}
 \newtheorem{theorem}{Theorem}
@@ -111,7 +113,7 @@ For example:
   \begin{array}{cc}
     x + y & \geqslant 3 \\
     y - x & < 2 \\
-    x \in \mathbb{Z}
+    x \in \ints
   \end{array}
   \right.
 \end{displaymath}
@@ -120,7 +122,7 @@ is a MILP.
 More formally, if $S$ in a set of linear constraints and $I$ the set of
 variables that are required to be integer, if $v$ is a valuation, I will use the
 notation $$v \vDash_I S$$ for $v \vDash S$ and
-$\forall x_i \in I.~v(x_i) \in \mathbb{Z}$.
+$\forall x_i \in I.~v(x_i) \in \ints$.
 
 Let $\Phi$ be a boolean formula of atoms of the theory $T$. We may want to find
 an assignement $v$ that satisfies $\Phi$, or to know if no such assignement
@@ -202,15 +204,15 @@ principle of the algorithm is the following:
 \begin{itemize}
   \item Search a solution $v$ to the problem $S$. If no solution exists, return
     $\cunsat$.
-  \item If for all $x_i \in I$, $v(i) \in \mathbb{Z}$, then $v \vDash_I S$.
+  \item If for all $x_i \in I$, $v(i) \in \ints$, then $v \vDash_I S$.
     Return $v$.
   \item If there exists a variable $x_i \in I$ such that
-    $v(x_i) \notin \mathbb{Z}$, we can remark that for all solution of this
+    $v(x_i) \notin \ints$, we can remark that for all solution of this
     MILP, either the constraint $x_i \leqslant \lfloor v(x_i) \rfloor$ is
     satisfied, or  $x_i \geqslant \lceil v(x_i) \rceil$ is satisfied.
     
     We can then try to split our initial problem into two subproblems (this is
-    the \textit{branching} step):
+    the \textit{branching step}):
     \begin{itemize}
       \item Recursively call branch-and-bound on the constraints set
         $$S \cup \{x_i \leqslant \lfloor v(x_i) \rfloor\}$$ and $I$.
@@ -228,7 +230,7 @@ principle of the algorithm is the following:
 %  Search for a solution $v$ of $S$
 %  \If{no solution $v$ exists}
 %    \Return $\cunsat$
-%  \ElsIf {$\forall x_i \in I.~v(x_i) \in \mathbb{Z}$}
+%  \ElsIf {$\forall x_i \in I.~v(x_i) \in \ints$}
 %    \Return $v$
 %  \Else
 %    \Return $3v + 4$
@@ -243,7 +245,7 @@ let us examine the following ILP:
   \begin{array}{l}
     3x - 3y \geqslant 1 \\
     3x - 3y \leqslant 2 \\
-    x, y \in \mathbb{Z} \\
+    x, y \in \ints \\
   \end{array}
   \right.
 \end{equation}
@@ -256,13 +258,13 @@ here is what we could obtain:
   \item Obtain the solution $(\frac{1}{3}, 0)$. The variable $x$ is not
     integral. Try to solve the problem with the extra constaint
     $x \geqslant 1$.
-  \item Obtain the solution $(1, \frac{2}{3})$. The variable $y$ is not
+  \item Obtain the solution $(1, \frac{1}{3})$. The variable $y$ is not
     integral. Try to solve the new problem with the extra constraint $y
     \geqslant 1$.
   \item Obtain the solution $(1 + \frac{1}{3}, 1)$. The variable $x$ is not
     integral. Try to solve the problem with the extra constaint
     $x \geqslant 2$.
-  \item Obtain the solution $(2, 1 + \frac{2}{3})$. The variable $y$ is not
+  \item Obtain the solution $(2, 1 + \frac{1}{3})$. The variable $y$ is not
     integral. Try to solve the new problem with the extra constraint $y
     \geqslant 2$.
   \item etc...
@@ -305,9 +307,10 @@ In this case, the problem is unbounded and makes the branch-and-bound algorithm
 loop. This is why we will try to add constraints of the form $-B \leqslant x_i
 \leqslant B$ for all variable $x_i$ to bound the problem, at the condition that
 the bounded problem admits a solution if and only if the original problem admits
-a solution.
+a solution. This is what we are going to see in the next section.
 
 \subsection{Obtening bounds for ILPs and MILPs}
+\label{schrijverbnd}
 First of all, let us remark that if a linear problem contains only large
 inequalities, it could be put in the form:
 
@@ -327,14 +330,17 @@ $$A = (a_{ij})_{\substack{1 \leqslant i \leqslant n \\
 $b = (b_j)_{1 \leqslant j \leqslant p}$. We identify a valuation of $n$
 variables to a vector of dimension $n$.
 
-To derive bounds, we will use definitions and results that can be found in the
-book of Schrijver \cite{Schrijver1998}.
+Now, we are going to give a proof that MILPs admits a solution if and only if
+they admit a solution of small size. In what follows, we will focus on ILPs, but
+the results can be easily extended to MILPs. Most of the definitions and
+results can be found in Schrijver's book \cite{Schrijver1998}.
 
 \begin{definition}[Finitely Generated Cone]
   A set of points $C$ is a \textup{finitely generated cone}
   iff $C = \cone~\{x_0, ..., x_{n-1}\}$ where
   $$\cone~\{x_0, ..., x_{n-1}\} =
-      \{\sum_{i<n} \lambda_i x_i~|~\lambda_0, ..., \lambda_{n-1} \leqslant 0\}
+      \left\{\sum_{i<n} \lambda_i x_i~|~
+               \lambda_0, ..., \lambda_{n-1} \geqslant 0\right\}
   $$
   for some $x_0, ..., x_{n-1}$.
 \end{definition}
@@ -357,8 +363,9 @@ book of Schrijver \cite{Schrijver1998}.
 \begin{definition}[Polytope]
   A set of points $P$ is a \textup{polytope} iff it is the convex hull of a
   finite set $C = \{x_0, ..., x_{m-1}\}$, \textit{i.e}
-  $$C = \{\sum_{i<m} \lambda_i x_i~|~\lambda_0, ..., \lambda_{m-1} \geqslant 0
-                                     \wedge \sum_{i<m} \lambda_i = 1\}$$
+  $$C = \left\{
+          \sum_{i<m} \lambda_i x_i~|~\lambda_0, ..., \lambda_{m-1} \geqslant 0
+                                     \wedge \sum_{i<m} \lambda_i = 1\right\}$$
 \end{definition}
 
 \begin{corollary}[Decomposition Theorem for Polyhedra]
@@ -426,7 +433,7 @@ areas. As we can see, it is the sum of a polytope (the red triangle) and a cone
 
 \begin{definition}[Integer Hull]
   Given a polyhedron $P$, the \textup{integer hull} $P_I$ is the convex hull of
-  the integral vectors of $P$, i.e $P_I = Hull (P \cap \mathbb{Z}^n\}$.
+  the integral vectors of $P$, i.e $P_I = Hull (P \cap \ints^n\}$.
 \end{definition}
 
 \begin{theorem}
@@ -436,13 +443,13 @@ areas. As we can see, it is the sum of a polytope (the red triangle) and a cone
 \end{theorem}
 \begin{proof}
   Let us decompose $P$ into $P = Q + C$ where
-  $C = \cone~\{y_0, ..., y_{s-1}\}$. All the $y_i$ are rational vectors.
+  $C = \cone~\{y_0, ..., y_{s-1}\}$. All the $y_i$'s are rational vectors.
   Note that if we multiply them by positive constants, the cone is unchanged.
-  This why, without loss of generality, we can assume that the $y_i$ are
+  This why, without loss of generality, we can assume that the $y_i$'s are
   integral.
 
   Let us define
-  $$B = \{\sum_{i < s} \mu_i y_i~|~0 \leqslant \mu_i \leqslant 1\}$$
+  $$B = \left\{\sum_{i < s} \mu_i y_i~|~0 \leqslant \mu_i \leqslant 1\right\}$$
   and show that $$P = (Q + B)_I + C$$
 
   The easy inclusion is the following:
@@ -467,7 +474,7 @@ A graphical representation of this proof is given in figure
 \ref{integer_hull_decomp}. With again the polytope defined by the problem
 \ref{eqdecomp}, the set boundary of the set $(Q + B)$ is represented
 in red, $(Q + B)_I$ is represented in green. As we can see, $(Q + B)_I + C$ (the
-red and yellow areas) is exactly the integer hull of the polyhedron.
+green and yellow areas) is exactly the integer hull of the polyhedron.
 
 \begin{figure}[h]
   \label{integer_hull_decomp}
@@ -510,57 +517,133 @@ red and yellow areas) is exactly the integer hull of the polyhedron.
     \draw[thick] (A') -- (J);
     \draw[thick] (M) -- (E');
 
+    \draw[red, thick, dashed, ->] (B) -- (1.5, 5);
+    \draw[red, thick, dashed, ->] (D) -- (4.5, 3.5);
+    \draw[red, thick, dashed, ->] (D) -- (5.5, 1.5);
+    \draw[red, thick, dashed] (B) -- (D);
     \fill[fill=yellow, opacity=0.5]
       (A') -- (J) -- (I) -- (O) -- (N) -- (M) -- (E') -- (extr) -- cycle;
-    \draw[red, very thick]
-      (B) -- (C) -- (D) -- (5.5, 1.5) -- (4.5, 3.5) -- (1.5, 5) -- cycle;
     \draw[very thick, fill=green, fill opacity=0.5]
       (I) -- (J) -- (K) -- (L) -- (M) -- (N) -- (O) -- cycle;
-
-    \draw[red, thick, ->] (B) -- (1.5, 5);
-    \draw[red, thick, ->] (D) -- (4.5, 3.5);
-    \draw[red, thick, ->] (D) -- (5.5, 1.5);
+    \draw[red, very thick]
+      (B) -- (C) -- (D) -- (5.5, 1.5) -- (4.5, 3.5) -- (1.5, 5) -- cycle;
   \end{tikzpicture}
 
   \caption{Decomposition of the integer hull of the polytope defined by the
            problem \ref{eqdecomp}}
 \end{figure}
 
-With this result, we know that the problem has an integral solution iff it has
-an integral solution in $Q'$ which is bounded. We now want to find a general
-bound $B$ depending on the parameters of the problem.
-In addition to the previous theorem, we need
-integrality an bound hypotheses to $C$. Let us use the notations
-$\llbracket a, b \rrbracket$ for the integers in the interval $[a, b]$.
-We finally have the desired theorem:
+\textbf{Remark:}
+Using the notations of the previous proof:
+$$P \cap \ints^n \neq \emptyset \Longleftrightarrow
+  P_I \neq \emptyset            \Longleftrightarrow
+  (Q + B)_I \neq \emptyset      \Longleftrightarrow
+  (Q + B) \cap \ints^n \neq \emptyset$$
 
-\begin{theorem}
+% TODO: Cite Schriver?
+Moreover, we can assume that the vectors $\{y_0, ..., y_{s-1}\}$ are linearly
+independant using the fundamental theorem of linear inequalities, which implies
+that $s \leqslant n$.
+
+Finally, if $Q = Hull~\{x_0, ..., x_{k-1}\}$, then for every
+$z \in Q + B$, $z \in [-B, B]^n$ where
+$$B = \max_{ij} |x_{ij}| + n \cdot \max_{i, j} |y_{ij}|$$
+
+
+With this remark, what remains to do is to find a bound $B$ that depends on the
+parameters of the problem. To do so, a solution is to generalize the previous
+theorems to bounds. % TODO: find a better formulation
+We will use the notation
+$\llbracket a, b \rrbracket$ for the set of integers in the interval $[a, b]$.
+
+\begin{theorem}[Generalized Farkas-Minkowsky-Weyl Theorem]
+  A set $C$ is a finitely generated cone iff is is a polyhedral cone.
+
+  Moreover, if $C = \{x~|~Ax \leqslant 0\}$ and
+  $A \in \llbracket -m, m \rrbracket^{p \times n}$ with $m \leqslant 1$,
+  there exists a finite set $Y$ such that
+  $Y \subseteq \llbracket -B, B \rrbracket^n$
+  and $$C = \cone~Y$$ where
+  $$B = (n - 1)! \cdot m^n$$
+\end{theorem}
+
+\begin{corollary}[Generalized Decomposition Theorem]
+  A set of points $P$ is a polyhedron iff there exists a polytope $C$ and a
+  finitely generated cone $C$ such that $P = Q + C$.
+
+  Moreover, if $P = \{x~|~Ax \leqslant b\}$ with
+  $A \in \llbracket -m, m \rrbracket^{p \times n}$,
+  $b \in \llbracket -m, m \rrbracket^p$, and $m \geqslant 1$,
+  then there exists finite sets
+  $Q \subseteq [-B, B]$ and $X \subseteq \llbracket -B, B \rrbracket$ such that
+  $$P = hull~Q + \cone~X$$ with $$B = n! \cdot m^n$$
+\end{corollary}
+
+We finally have the desired result:
+
+\begin{corollary}
   If $P = \{x~|~Ax \leqslant b\}$ with
   $A \in \llbracket -m, m \rrbracket^{p \times n}$,
   $b \in \llbracket -m, m \rrbracket^p$ and $m \geqslant 1$, then
-  $$P \cap \mathbb{Z}^n \neq \emptyset \Longleftrightarrow
+  $$P \cap \ints^n \neq \emptyset \Longleftrightarrow
   P \cap \llbracket -B, B \rrbracket^n \neq \emptyset$$ where
   $$B = (n + 1)! \cdot m^n$$
-\end{theorem}
+\end{corollary}
 
 With the same ouline of proof, we can obtain a more general result that
 encompasses MILPs and strict inequalities. If $I$ is a subset of
 $\llbracket 1, n \rrbracket$:
+
 \begin{theorem}
   If $P = \{x~|~Ax \leqslant b \cap A'x < b'\}$ with
   $A \in \llbracket -m, m \rrbracket^{p \times n}$,
   $b \in \llbracket -m, m \rrbracket^p$,
-  $A' \in \llbracket -m, m \rrbracket^{p \times n}$,
-  $b' \in \llbracket -m, m \rrbracket^p$ and $m \geqslant 1$, then
+  $A' \in \llbracket -m, m \rrbracket^{p' \times n}$,
+  $b' \in \llbracket -m, m \rrbracket^{p'}$ and $m \geqslant 1$, then
 
-  $$\{x \in P~|~\forall i \in I.~x_i \in \mathbb{Z}\} \neq \emptyset
+  $$\{x \in P~|~\forall x_i \in I.~x_i \in \ints\} \neq \emptyset
       \Longleftrightarrow
-    \{x \in P~|~\forall i \in I.~x_i \in \llbracket -B, B \rrbracket\}
+    \{x \in P~|~\forall x_i \in I.~x_i \in \llbracket -B, B \rrbracket\}
       \neq \emptyset$$
   where
   $$B = (n + 1)! \cdot m^n$$
 \end{theorem}
 
+\section{Formalization in Isabelle}
+%TODO: Find a better introduction
+As we have presented a method to solve MILPs, we can focus on the main work that
+has been done during this internship: the formalization of the previous theorems
+and the implementation of an MILP solver.
+
+%TODO: Find a better section name
+\subsection{Formalization of Results concerning Linear Inequalities}
+The first part of the work consisted in formalizing the results from Schijver's
+book, following the description given in the subsection \ref{schrijverbnd}.
+Also, other results including the Farkas' Lemma or the Carathéodory's theorem
+were formalized.
+
+% 5551 lines of code
+The work was published in AFP \cite{Linear_Inequalities-AFP}.
+
+This was done in collaboration with René Thiemann and Ralph Bottesch:
+% TODO: complete
+\begin{itemize}
+  \item René developped results about integral and bounded vectors or matrices.
+  \item Ralph focused on the demonstration of the fundamental theorem of linear
+    inequalities and...
+  \item I mainly focused on the demonstration of the Farkas-Minkowsky-Weyl and
+    the decomposition theorem.
+\end{itemize}
+
+\Snippet{nonneg-lincomb}
+\Snippet{nonneg-lincomb-list}
+\Snippet{finite-cone}
+\Snippet{cone}
+\Snippet{cone-list}
+\Snippet{finite-cone-iff-cone-list}
+\Snippet{farkas-minkowsky-1}
+\Snippet{farkas-minkowsky-2}
+\Snippet{farkas-minkowsky}
 
 \bibliographystyle{plain}
 \bibliography{sources}
@@ -632,30 +715,5 @@ to the system:
 
 $\icheck$ may return the assignement $(x=1, y=2)$. Finally, the formula $\Phi$
 is satisfiable, and $(x=1, y=2) \vDash \Phi$.
-
-\section{To move on another section} To do so, we will generalize the statements of
-the previous theorems to incorporate bounds. 
-\begin{theorem}[Generalized Farkas-Minkowsky-Weyl Theorem]
-  A set $C$ is a finitely generated cone iff is is a polyhedral cone.
-
-  Moreover, if $C = \cone~X$ with $X \subseteq \llbracket -m, m \rrbracket$
-  and $m \geqslant 1$,
-  then there exists a matrix $A \in \llbracket -B, B \rrbracket^{p \times n}$
-  such that $$C = \{x~|~Ax \leqslant 0\}$$ with $$B = (n-1)! \cdot m^n$$
-\end{theorem}
-
-\begin{corollary}[Generalized Decomposition Theorem]
-  A set of points $P$ is a polyhedron iff there exists a polytope $C$ and a
-  finitely generated cone $C$ such that $P = Q + C$.
-
-  Moreover, if $P = \{x~|~Ax \leqslant b\}$ with
-  $A \in \llbracket -m, m \rrbracket^{p \times n}$ and
-  $b \in \llbracket -m, m \rrbracket^p$, and $m \geqslant 1$,
-  then there exists finite sets
-  $Q \subseteq [-B, B]$ and $X \subseteq \llbracket -B, B \rrbracket$ such that
-  $$P = hull~Q + \cone~X$$ with $$B = n! \cdot m^n$$
-\end{corollary}
-
-
 
 \end{document}
